# fireflybot

./: .gitignore  CMakeLists.txt  README.md
include/: Blink.h  Camera.h  Sync.h
scripts/: 2022-05-01 18:41:15.337_blink_data.csv  2022-05-01 18:41:15.337_sync_data.csv  2022-05-01 18:41:23.740_blink_data.csv  2022-05-01 18:41:23.740_sync_data.csv  2022-05-01 19:17:59.640_blink_data.csv  2022-05-01 19:17:59.640_sync_data.csv  2022-05-01 19:18:13.335_blink_data.csv  2022-05-01 19:18:13.335_sync_data.csv  analyze_data.py  sync_data_0.csv  sync_data_1.csv
src/: Blink.cpp  Camera.cpp  Sync.cpp  camera.cpp  main.cpp
